build: upgrade to Java 17 LTS
- Update Maven compiler plugin source/target from 11 to 17
- Remove obsolete Java 11 VM option workarounds from DeepL.java
- Extends support until September 2029